[package]
name = "rmake"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
paste = "1.0.14"
regex = "1.9.5"
serde = {version = "1.0.188",  features = ["derive"]}
serde_yaml = "0.9.25"
structopt = "0.3.26"
tracing = "0.1"
tracing-subscriber = "0.3"
